# gstreamer-python

./: pyproject.toml
